Fixes issue #1545 - Remove unnecessary access flags for Exousia